<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RadioGroup
        android:id="@+id/rg_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

   
    <RadioButton
        android:id="@+id/r_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rg_result"
        android:layout_alignLeft="@+id/tv_result"
        android:text="@string/radio_success" />

    <RadioButton
        android:id="@+id/r_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/r_success"
        android:layout_alignTop="@+id/rg_result"
        android:checked="true"
        android:text="@string/radio_error" />
 </RadioGroup>
        <Button
        android:id="@+id/btn_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg_result"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:text="@string/btn_complete" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rg_result"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:text="@string/tv_result"
        android:textSize="30sp" />

</RelativeLayout>