<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_margin="30dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp" >

        <TextView
            android:id="@+id/tv_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_text"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop = "100dp" >

        <Button
            android:id="@+id/btn_sqlite"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="50dp"
            android:text="@string/btn_sqlite"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_preferences"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>